--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Pet-shop</title>
 </head>
 <body>
+    <div class="navbar"> this is navbar</div>
 
  <script src="index.js"></script>   
 </body>
