--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Pet-shop</title>
 </head>
 <body>
-    <div class="navbar"> this is navbar</div>
+    <div class="navbar">
+        <div>
+            <img src="images/logoipsum-332.svg" alt="logo">
+        </div>
+    </div>
 
  <script src="index.js"></script>   
 </body>
