--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div>
             <img src="images/logoipsum-332.svg" alt="logo">
         </div>
+        <div></div>
     </div>
 
  <script src="index.js"></script>   
